# Iriska_Discord_bot

./: .gitignore  Dockerfile  README.md  bot.py  compose.yaml  iriska.py  pyproject.toml
iriska/: __main__.py  bot.py  iriska.py  points.csv  points.py
